Added base html file that is extended by the index file and about file

--- a/week2_app/templates/week2_app/about.html
+++ b/week2_app/templates/week2_app/about.html
@@ -1,1 +1,5 @@
-<h1>This is our about page</h1>
+{% extends 'week2_app/base.html' %}
+
+{% block content %}
+   <p>Hi, this is the about page and stuff.</p>
+{% endblock %}
