--- a/week2_app/templates/week2_app/index.html
+++ b/week2_app/templates/week2_app/index.html
@@ -1,1 +1,9 @@
-<h1>This is our index template!</h1>
+{% extends 'week2_app/base.html' %}
+
+{% block content %}
+   <p>Hi, this is the home page</p>
+   <ul>
+       <li>this is the first thing</li>
+       <li>this is the second thing</li>
+   </ul>
+{% endblock %}
