--- a/week2_app/templates/week2_app/index.html
+++ b/week2_app/templates/week2_app/index.html
@@ -1,9 +1,12 @@
 {% extends 'week2_app/base.html' %}
 
 {% block content %}
-   <p>Hi, this is the home page</p>
-   <ul>
-       <li>this is the first thing</li>
-       <li>this is the second thing</li>
-   </ul>
+    <h1>List of Genres: </h1>
+    {% if genres %}
+        {% for genre in genres %}
+            <div class="post">
+                <h2>{{ genre.genre_name }}</h2>
+            </div>
+        {% endfor %}  
+    {% endif %}
 {% endblock %}
