--- a/week2_app/templates/week2_app/base.html
+++ b/week2_app/templates/week2_app/base.html
@@ -9,10 +9,16 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Deploy App</a></h1>
+            <div class='btn-toolbar pull-right'>
+                <div class='btn-group'>
+                    <a class="btn btn-primary" href="/about" role="button">About</a>               
+                </div>
+              </div>
+        <h1><a href="/">Deploy App</a></h1>
+            
         </div>
 
-        <div class="content container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-8">
                 {% block content %}
